AMA-018 : Standardize Vitalia Medical Catalog with CommonRepository and Lombok (GLOBAL ENTITIES)